# FEMU

./: meson.build
experiment/: nvme-ioctl.c
femu-scripts/: aff.sh  aff_host.sh  aff_ssd.sh  cpu-pin-scale.sh  femu-copy-scripts.sh  pkgdep.sh  run-blackbox.sh  set-boost-params.sh  set-freq.sh
femu-scripts/ftk/: qmp-vcpu-pin
hw/femu/: Kconfig  array.h  cpu_affinity.c  db_types.h  dlrm.c  dlrm.h  femu.c  isc_cc.cpp  isc_cc.h  isc_function.c  isc_function.h  kv_get.c  kv_range.c  lru_cache.c  lru_cache.h  meson.build  nvme-admin.c  nvme-io.c  nvme.h  test_function.c  test_function.h
hw/femu/backend/: dram.c
hw/femu/bbssd/: ftl.c  ftl.h
hw/femu/flash-cache/: BytesEqual.h  Hash.h
hw/femu/flash-cache/bighash/: Bucket.cpp  Bucket.h  BucketStorage.cpp  BucketStorage.h
hw/femu/flash-cache/common/: Buffer.cpp  Buffer.h  CompilerUtils.h  Hash.cpp  Hash.h  Types.cpp  Types.h  Utils.h
hw/i386/: pc.c
